--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
     {% block extra_js %}
     {% endblock %}
     
-    <title>Boutuique Ado {% block extra_title %} {% endblock %}</title>
+    <title>Boutique Ado {% block extra_title %} {% endblock %}</title>
   </head>
   <body>
       <header class="container-fluid fixed-top">
