--- a/static/css/base.css
+++ b/static/css/base.css
@@ -70,6 +70,12 @@ body {
     z-index: -1;
 }
 
+/*Inverts the colours of the badges when hovering over them*/
+a.category-badge > span.badge:hover {
+    background: #212529 !important;
+    color: #fff !important;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
