--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
                                         <a href="" class="dropdown-item">Product Management</a>
                                     {% endif %}
                                     <!--The below will be displayed if the user is authenticated-->
-                                    <a href="" class="dropdown-item">My Profile</a>
+                                    <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                     <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                                 {% else %}
                                     <!--The below will be displayed if the user is not authenticated-->
