--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -44,6 +44,13 @@
                 {% else %}
                 <small class="text-muted">No Rating</small>
                 {% endif %}
+                {% if request.user.is_superuser %}
+                    <!-- If the user is a superuser we will allow them to edit and delete products-->
+                    <small class="ml-3">
+                        <a href="{% url 'edit_product' product.id %}">Edit</a> | 
+                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                    </small>
+                {% endif %}
                 <p class="mt-3">{{ product.description }}</p>
                     <!--Form to add products to shopping bag-->
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
