--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -88,6 +88,13 @@
                                     {% else %}
                                     <small class="text-muted">No Rating</small>
                                     {% endif %}
+                                     {% if request.user.is_superuser %}
+                                     <!-- If the user is a superuser we will allow them to edit and delete products-->
+                                        <small class="ml-3">
+                                            <a href="{% url 'edit_product' product.id %}">Edit</a> | 
+                                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                                        </small>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
